--- a/src/app/App.css
+++ b/src/app/App.css
@@ -1449,9 +1449,11 @@ li {
 .comment__box {
     background-color: white;
     box-shadow: 0 20px 40px 0 rgba(0, 0, 0, 0.08);
-    width: 54rem;
     padding: 5.5rem;
     position: relative;
+    display: flex;
+    flex-direction: column;
+    width: auto;
 }
 
 @media (max-width: 1000px) {
@@ -1465,7 +1467,6 @@ li {
 .comment__box p {
     font-size: 2.2rem;
     font-weight: 500;
-    margin-top: auto;
 }
 
 .comment__name {
@@ -1480,8 +1481,8 @@ li {
 }
 
 .comment__profile img {
-    width: 8rem;
-    height: 9rem;
+    width: 7rem;
+    height: 7rem;
     border-radius: 50%;
 }
 
